[tool.poetry]
name = "backend-takehome-problem"
version = "0.1.0"
description = "A command line tool to fetch PubMed papers based on provided query"
authors = ["Akanksha <akankshadeshpande678@gmail.com>"]
readme = "README.md"
packages = [{include = "pubmed_fetcher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"

[tool.poetry.scripts]
get-papers-list = "src.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
